# recsysproj

./: .coveragerc  LICENSE  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py
notebooks/: Dataset Generation.ipynb  EDA and Preprocessing.ipynb  surprise.ipynb
recasino/: data.py
