[build-system]
requires = [
    "setuptools >= 49.2.0",
    "wheel",
    "versioneer-518",
]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["recasino"]
exclude = ["**/node_modules",
    "**/__pycache__",
]
venvPath = "/users/shaypalachy/.pyenv/versions/"
venv = "py3"

reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = false

pythonVersion = "3.10"
pythonPlatform = "Linux"
